--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/css/style.css"
+
             ],
             "scripts": []
           },
@@ -119,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "prova"
+    }
+  },
+  "defaultProject": "prova",
+  "cli": {
+    "analytics": false
+  }
 }
